--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	transition: all 150ms ease-in-out;
+	transition: background-color 150ms ease-in-out;
 }
 
 body {
