Added Sidebar & Removed Comment Sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <main class="main">
+	<app-sidebar></app-sidebar>
+
 	<div class="content">
 		<app-toolbar></app-toolbar>
 		<app-document></app-document>
